Bug 1053114 - fix serialization of shorthands with token value subproperties. r=heycam